fluid card passing thouh main branch

--- a/card fluid design.html
+++ b/card fluid design.html
@@ -33,7 +33,7 @@
         display: flex;
         justify-content: space-around;
         flex-wrap: wrap;
-        /* transition: all 0.2 linear; */
+        transition: all 0.2 linear;
       }
       .child {
         height: 200px;
